# strudach

./: .gitignore  Cargo.toml  README.md  strudach.strudach.yaml
examples/: database.json  database.results.yaml  database.schema.json  database.strudach.json
src/: lib.rs  main.rs
